Changed all percentages to px

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -43,10 +43,8 @@
                 src="images/dots.jpeg" ... />
             <div class="browse">
                 <h3 style="position: absolute;
-                    left: 31%;
-                    right: 10.4%;
-                    top: 34.33%;
-                    bottom: 55.92%;
+                    left: 130px;
+                    top: 240px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
