--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -38,10 +38,8 @@
             <div id="user_info">
                 <form id="name_invites">
                     <h4 style="position: absolute;
-                    left: 14%;
-                    right: 10.4%;
-                    top: 38.33%;
-                    bottom: 55.92%;
+                    left: 50px;
+                    top: 250px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
@@ -51,10 +49,8 @@
 
                     color: #000000;"> Create a User Name and Password</h4>
                     <h5 style="position: absolute;
-                    left: 15%;
-                    right: 58.4%;
-                    top: 50.33%;
-                    bottom: 55.92%;
+                    left: 55px;
+                    top: 335px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
@@ -73,10 +69,8 @@
                        border: 1px solid #707070;
                        box-sizing: border-box;">
                     <h5 style="position: absolute;
-                    left: 15%;
-                    right: 58.4%;
-                    top: 62.33%;
-                    bottom: 55.92%;
+                    left: 55px;
+                    top: 415px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
@@ -109,10 +103,8 @@
 
                 <div id="p_site">
                     <h5 style="position: absolute;
-                    left: 14%;
-                    right: 10.4%;
-                    top: 38.33%;
-                    bottom: 55.92%;
+                    left: 50px;
+                    top: 230px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
@@ -125,7 +117,7 @@
                       width: 86px;
                       height: 35px;
                       left: 130px;
-                      top: 330px;
+                      top: 290px;
                       background: #BADFFF;
                       border: 1px solid #0A47A2;
                       box-sizing: border-box;">Take Test!</button>
@@ -138,10 +130,8 @@
 
                 <form id="lc">
                     <h5 style="position: absolute;
-                    left: 14%;
-                    right: 10.4%;
-                    top: 54.33%;
-                    bottom: 55.92%;
+                    left: 50px;
+                    top: 360px;
 
                     font-family: 'Sniglet Bold', arial;
                     font-style: normal;
@@ -156,7 +146,7 @@
                        padding-right: 10px;
                        height: 36px;
                        left: 55px;
-                       top: 470px;
+                       top: 450px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -166,7 +156,7 @@
                        padding-right: 10px;
                        height: 36px;
                        left: 125px;
-                       top: 470px;
+                       top: 450px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -176,7 +166,7 @@
                        padding-right: 10px;               
                        height: 36px;
                        left: 195px;
-                       top: 470px;
+                       top: 450px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -185,7 +175,7 @@
                        width: 50px;
                        height: 36px;
                        left: 265px;
-                       top: 470px;
+                       top: 450px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
