--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,10 +66,8 @@
                                        border: 1px solid #0A47A2;
                                        box-sizing: border-box;"></input>
 				<h5 style="position: absolute;
-					left: 13%;
-					right: 58.4%;
-					top: 38.33%;
-					bottom: 55.92%;
+					left: 55px;
+					top: 285px;
 
 					font-family: 'Sniglet Bold', arial;
 					font-style: normal;
@@ -88,10 +86,8 @@
 					   border: 1px solid #707070;
 					   box-sizing: border-box;">
 				<h5 style="position: absolute;
-					left: 13%;
-					right: 58.4%;
-					top: 49.33%;
-					bottom: 55.92%;
+					left: 55px;
+					top: 365px;
 
 					font-family: 'Sniglet Bold', arial;
 					font-style: normal;
@@ -131,10 +127,8 @@
                                        border: 1px solid #0A47A2;
                                        box-sizing: border-box;"></input>	
 				<h5 source media = "max-width: 400px; max-height:617px"style="position: absolute;
-					left: 13%;
-					right: 30.87%;
-					top: 40.33%;
-					bottom: 55.92%;
+					left: 55px;
+					top: 295px;
 
 					font-family: 'Sniglet Bold', arial;
 					font-style: normal;
