--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -47,10 +47,8 @@
                                        box-sizing: border-box;"></input>                                       
             </div>
                 <h1 style="position: absolute;
-                       left: 20.2%;
-                       right: 15.53%;
-                       top: 26.9%;
-                       bottom: 86.36%;
+                       left: 80px;
+                       top: 200px;
 
                        font-style: normal;
                        font-weight: normal;
